<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">魔法屋</string>
    <string name="reputation">口 碑</string>
    <string name="tutorials">教 程</string>
    <string name="shopping">逛 街</string>
    <string name="sister_help">学姐帮</string>
    <string name="home_page">首 页</string>
    <string name="welfare">福 利</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tutorial">教程</string>
    <string name="paihangbang">排行榜</string>
    <string name="gongxiao">功效</string>
    <string name="senior">学姐</string>
    <string name="searchtutorial">输入有关内容</string>
    <string name="color">ff4366</string>
    <string name="searchreputation">输入产品名称查找</string>
    <string name="searchseniorforhelp">说困难，求帮助</string>
    <string name="seniorhelp">求解</string>
    <string name="searchsenior">找学姐</string>
    <string name="school">学校</string>
    <string name="department">院系</string>
    <string name="jibie">用户级别</string>
    <string name="fuzhi">肤质</string>
    <string name="fazhi">发质</string>
</resources>
