<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/helplayout" android:background="#ffff4366" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:textSize="15.0sp" android:gravity="center" android:layout_gravity="center" android:id="@id/searchseniorforhelp" android:background="@drawable/shape" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="5.0dip" android:hint="@string/searchseniorforhelp" />
        <ImageView android:id="@id/tutorialwenhao" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="35.0dip" android:layout_marginTop="15.0dip" android:src="@drawable/wenhao" android:layout_alignLeft="@id/searchtutorial" android:layout_alignTop="@id/searchtutorial" android:contentDescription="@null" />
    </RelativeLayout>
    <RelativeLayout android:orientation="vertical" android:id="@id/seniorlist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/helplayout">
        <ListView android:id="@id/seniorList" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:orientation="horizontal" android:id="@id/seniorschool" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/seniorlist" android:layout_centerHorizontal="true">
        <TextView android:textSize="12.0sp" android:gravity="right" android:layout_gravity="center" android:id="@id/seniorschooltextview" android:layout_width="50.0dip" android:layout_height="25.0dip" android:text="@string/school" />
        <EditText android:gravity="center" android:background="@drawable/seniorshape" android:layout_width="120.0dip" android:layout_height="25.0dip" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/seniorschooltextview" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:orientation="horizontal" android:id="@id/seniordepartment" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/seniorschool" android:layout_centerHorizontal="true">
        <TextView android:textSize="12.0sp" android:gravity="right" android:layout_gravity="center" android:id="@id/seniorschooltextview2" android:layout_width="50.0dip" android:layout_height="25.0dip" android:text="@string/department" />
        <EditText android:gravity="center" android:background="@drawable/seniorshape" android:layout_width="120.0dip" android:layout_height="25.0dip" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/seniorschooltextview2" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:orientation="horizontal" android:id="@id/seniorjibie" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/seniordepartment" android:layout_centerHorizontal="true">
        <TextView android:textSize="12.0sp" android:gravity="right" android:layout_gravity="center" android:id="@id/seniorschooltextview3" android:layout_width="50.0dip" android:layout_height="25.0dip" android:text="@string/jibie" />
        <EditText android:gravity="center" android:background="@drawable/seniorshape" android:layout_width="120.0dip" android:layout_height="25.0dip" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/seniorschooltextview3" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:orientation="horizontal" android:id="@id/seniorfuzhi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/seniorjibie" android:layout_centerHorizontal="true">
        <TextView android:textSize="12.0sp" android:gravity="right" android:layout_gravity="center" android:id="@id/seniorschooltextview4" android:layout_width="50.0dip" android:layout_height="25.0dip" android:text="@string/fuzhi" />
        <EditText android:gravity="center" android:background="@drawable/seniorshape" android:layout_width="120.0dip" android:layout_height="25.0dip" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/seniorschooltextview4" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:orientation="horizontal" android:id="@id/seniorfazhi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/seniorfuzhi" android:layout_centerHorizontal="true">
        <TextView android:textSize="12.0sp" android:gravity="right" android:layout_gravity="center" android:id="@id/seniorschooltextview5" android:layout_width="50.0dip" android:layout_height="25.0dip" android:text="@string/fazhi" />
        <EditText android:gravity="center" android:background="@drawable/seniorshape" android:layout_width="120.0dip" android:layout_height="25.0dip" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/seniorschooltextview5" />
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:background="#ffff4366" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <EditText android:textSize="15.0sp" android:gravity="center" android:layout_gravity="center" android:id="@id/searchsenior" android:background="@drawable/shape" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="5.0dip" android:hint="@string/searchsenior" />
        <ImageView android:id="@id/tutorialfangdajing" android:layout_width="45.0dip" android:layout_height="45.0dip" android:layout_marginLeft="15.0dip" android:src="@drawable/fangdajing" android:layout_alignLeft="@id/searchsenior" android:layout_alignTop="@id/searchsenior" android:contentDescription="@null" />
    </RelativeLayout>
</RelativeLayout>
