<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="#ffff4366" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reputation" />
        <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="15.0sp" android:gravity="center" android:layout_gravity="center" android:id="@id/searchproduct" android:background="@drawable/shape" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="5.0dip" android:hint="@string/searchreputation" />
            <ImageView android:id="@id/reputationfangdajing" android:layout_width="45.0dip" android:layout_height="45.0dip" android:layout_marginLeft="35.0dip" android:layout_marginTop="10.0dip" android:src="@drawable/fangdajing" android:layout_alignLeft="@id/searchtutorial" android:layout_alignTop="@id/searchtutorial" android:contentDescription="@null" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
        <ImageView android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/pinpai" android:layout_weight="1.0" />
        <ImageView android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/paihangbang" android:layout_weight="1.0" />
        <ImageView android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/gongxiao" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reputation" android:layout_weight="1.0" />
        <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paihangbang" android:layout_weight="1.0" />
        <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gongxiao" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:background="#ffaaaaaa" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ListView android:orientation="horizontal" android:id="@id/reputationlist" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
