<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/mainbtnlayout" android:background="#ffff4366" android:layout_width="fill_parent" android:layout_height="@dimen/main_activity_button_height" android:baselineAligned="false">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:id="@id/reputationbtn" android:background="@drawable/koubei" android:layout_width="@dimen/main_activity_button_below_img_heigth" android:layout_height="@dimen/main_activity_button_below_img_heigth" android:layout_marginTop="@dimen/main_activity_horizontal_margin" android:layout_marginStart="@dimen/main_activity_horizontal_margin" android:layout_marginEnd="@dimen/main_activity_horizontal_margin" />
            <TextView android:textSize="@dimen/main_activity_fontsize" android:textColor="#ffffffff" android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/main_activity_button_below_text_heigth" android:layout_marginTop="@dimen/main_activity_horizontal_margin" android:text="@string/reputation" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:id="@id/tutorialsbtn" android:background="@drawable/jiaocheng" android:layout_width="fill_parent" android:layout_height="@dimen/main_activity_button_below_img_heigth" android:layout_marginTop="@dimen/main_activity_horizontal_margin" android:layout_marginStart="@dimen/main_activity_horizontal_margin" android:layout_marginEnd="@dimen/main_activity_horizontal_margin" />
            <TextView android:textSize="@dimen/main_activity_fontsize" android:textColor="#ffffffff" android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/main_activity_button_below_text_heigth" android:layout_marginTop="@dimen/main_activity_horizontal_margin" android:text="@string/tutorials" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:id="@id/shoppingbtn" android:background="@drawable/shopping" android:layout_width="@dimen/main_activity_button_below_img_heigth" android:layout_height="@dimen/main_activity_button_below_img_heigth" android:layout_marginTop="@dimen/main_activity_horizontal_margin" android:layout_marginStart="@dimen/main_activity_horizontal_margin" android:layout_marginEnd="@dimen/main_activity_horizontal_margin" />
            <TextView android:textSize="@dimen/main_activity_fontsize" android:textColor="#ffffffff" android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/main_activity_button_below_text_heigth" android:layout_marginTop="@dimen/main_activity_horizontal_margin" android:text="@string/shopping" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:id="@id/sisterhelpbtn" android:background="@drawable/xuejiebang" android:layout_width="@dimen/main_activity_button_below_img_heigth" android:layout_height="@dimen/main_activity_button_below_img_heigth" android:layout_marginTop="@dimen/main_activity_horizontal_margin" android:layout_marginStart="@dimen/main_activity_horizontal_margin" android:layout_marginEnd="@dimen/main_activity_horizontal_margin" />
            <TextView android:textSize="@dimen/main_activity_fontsize" android:textColor="#ffffffff" android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/main_activity_button_below_text_heigth" android:layout_marginTop="@dimen/main_activity_horizontal_margin" android:text="@string/sister_help" />
        </LinearLayout>
    </LinearLayout>
    <ImageView android:id="@id/slideimg" android:layout_width="wrap_content" android:layout_height="@dimen/main_activity_slide_height" android:layout_marginLeft="@dimen/main_activity_horizontal_bigmargin" android:layout_marginTop="@dimen/main_activity_horizontal_bigmargin" android:layout_marginRight="@dimen/main_activity_horizontal_bigmargin" android:layout_marginBottom="@dimen/main_activity_horizontal_bigmargin" android:src="@drawable/shouye0" android:scaleType="fitXY" android:layout_below="@id/mainbtnlayout" />
    <ListView android:id="@id/main_activity_listview" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/main_activity_horizontal_bigmargin" android:layout_marginRight="@dimen/main_activity_horizontal_bigmargin" android:divider="@android:color/darker_gray" android:dividerHeight="1.0dip" android:layout_below="@id/slideimg" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/main_activity_bottomebtn_maxheigt" android:layout_marginLeft="@dimen/main_activity_horizontal_bigmargin" android:layout_marginRight="@dimen/main_activity_horizontal_bigmargin" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="@dimen/main_activity_bottomebtn_minheigt" android:layout_weight="3.0">
            <Button android:id="@id/homebtn" android:background="@drawable/home" android:layout_width="@dimen/main_activity_bottomebtn_slide_imgheigt" android:layout_height="@dimen/main_activity_bottomebtn_slide_bigimgheigt" android:layout_marginStart="@dimen/main_activity_horizontal_margin" android:layout_marginEnd="@dimen/main_activity_horizontal_margin" />
            <TextView android:textColor="#ffff4366" android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/main_activity_bottomebtn_slide_txtheigt" android:text="@string/home_page" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="2.0">
            <Button android:id="@id/magicbtn" android:background="@drawable/new_logo2" android:layout_width="@dimen/main_activity_bottomebtn_middlebtn_size" android:layout_height="@dimen/main_activity_bottomebtn_middlebtn_size" android:layout_marginTop="@dimen/main_activity_horizontal_margin" android:layout_marginStart="@dimen/main_activity_horizontal_margin" android:layout_marginEnd="@dimen/main_activity_horizontal_margin" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="@dimen/main_activity_bottomebtn_minheigt" android:layout_weight="3.0">
            <Button android:id="@id/welfarebtn" android:background="@drawable/shouye_fuli" android:layout_width="@dimen/main_activity_bottomebtn_slide_imgheigt" android:layout_height="@dimen/main_activity_bottomebtn_slide_bigimgheigt" android:layout_marginStart="@dimen/main_activity_horizontal_margin" android:layout_marginEnd="@dimen/main_activity_horizontal_margin" />
            <TextView android:textColor="#ff000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/main_activity_bottomebtn_slide_txtheigt" android:text="@string/welfare" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
